# rust-cats-social

./: .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yaml
.github/workflows/: main.yml
migrations/: 20241128035355_init.sql
src/: main.rs
src/api/: cats.rs  mod.rs  users.rs
src/configs/: db.rs
src/entities/: cat.rs  mod.rs  user.rs
src/helpers/: jwt.rs  mod.rs  passwords.rs
src/middlewares/: auth.rs
src/repositories/: cat.rs  user.rs
