[package]
name = "cats-social-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
url = "2.5.4"
validator = { version = "0.19.0", features = ["derive"] }
